tests/out/error/match/too_few_branches.out
tests/out/error/match/too_few_branches.in.bt:3:1 error: match needs at least one non-else branch
tests/out/error/match/too_few_branches.in.bt:5:1 error: match needs at least one non-else branch
